--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,30 +1,1 @@
-@use '@angular/material' as mat;
-
-$primary: mat.m2-define-palette(mat.$m2-indigo-palette);
-$accent: mat.m2-define-palette(mat.$m2-blue-palette, A200, A400, 700);
-$warn: mat.m2-define-palette(mat.$m2-red-palette);
-
-$custom-theme: mat.m2-define-light-theme(
-  (
-    color: (
-      primary: $primary,
-      accent: $accent,
-      warn: $warn,
-    ),
-    typography: mat.m2-define-typography-config(),
-    density: 0,
-  )
-);
-
-@include mat.core-theme($custom-theme);
-@include mat.button-theme($custom-theme);
-@include mat.all-component-themes($custom-theme);
-
-html, body {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
+@import './layouts/scss/global/global.scss';
