--- a/src/layouts/scss/components/theme-palette.scss
+++ b/src/layouts/scss/components/theme-palette.scss
@@ -16,6 +16,7 @@ $custom-theme: mat.m2-define-light-theme(
   )
 );
 
-@include mat.core-theme($custom-theme);
+@include mat.elevation-classes();
+@include mat.app-background();
 @include mat.button-theme($custom-theme);
 @include mat.all-component-themes($custom-theme);
