Altera import por use para ficar de acordo com a nova versao do sass

--- a/src/layouts/scss/global/global.scss
+++ b/src/layouts/scss/global/global.scss
@@ -1,6 +1,7 @@
-@import '../global/variables';
-@import '../components/theme-palette.scss';
-@import '../components/utilities/colors.scss';
+@use '../global/variables';
+@use '../components/theme-palette.scss';
+@use '../components/card.scss';
+@use '../components/utilities/colors.scss';
 
 
 html, body {
