--- a/src/app/courses/containers/courses/courses.component.html
+++ b/src/app/courses/containers/courses/courses.component.html
@@ -5,7 +5,7 @@
     </mat-toolbar>
   </mat-card-header>
   <mat-card-content>
-    <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+    <table mat-table [dataSource]="courses$" class="mat-elevation-z8">
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Curso </th>
